infrastructure/kubernetes/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080 # api-gateway
        - protocol: TCP
          port: 8081 # persons-service
        - protocol: TCP
          port: 8000 # image-requests-service
        - protocol: TCP
          port: 3000 # web-ui
        - protocol: TCP
          port: 5432 # postgresql
        - protocol: TCP
          port: 27017 # mongodb
        - protocol: TCP
          port: 6379 # redis
        - protocol: TCP
          port: 9090 # prometheus
        - protocol: TCP
          port: 3001 # grafana
